update seeds etc.

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ config/database.yml
 public/uploads
 
 # Ignore secrets.yml
-/config/secrets.yml
+#/config/secrets.yml
 
 # Ignore application configuration
 /config/application.yml
